# multi-agent-demo-system

./: README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  entrypoint.sh  manage.py  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt
backend/articles/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py  workflow_engine.py
backend/articles/migrations/: 0001_initial.py  0002_workflowrun_logentry_agentexecution.py
backend/core/: settings.py  urls.py
frontend/: .gitignore  Dockerfile  biome.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/ui/: button.test.tsx  button.tsx
frontend/src/features/workspace/: constants.ts  types.ts  utils.ts
frontend/src/features/workspace/components/: CanvasEntityNode.tsx  LogsPanel.tsx  WorkspaceCanvasPanel.tsx
frontend/src/features/workspace/hooks/: usePanelLayout.ts  useWorkflowPolling.ts  useWorkspaceCanvas.ts  useWorkspaceLogs.ts
frontend/src/routes/: routeTree.tsx
