[project]
name = "multi-agent-demo-backend"
version = "0.1.0"
description = "Backend for the multi-agent newsroom demo"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.1,<6.0",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.4",
    "django-environ>=0.11",
    "django-redis>=5.4",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "gunicorn>=23.0",
    "whitenoise>=6.7",
    "dj-database-url>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations", "*/migrations/*"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",              # isort
    "B",              # bugbear
    "UP",             # pyupgrade
    "DJ",             # flake8-django
    "SIM",            # simplify
    "C4",             # comprehensions
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/settings.py" = ["E402", "F405"]
"**/tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-ra --strict-markers"
testpaths = ["."]

[tool.coverage.run]
source = ["."]
omit = ["*/migrations/*", "*/tests/*", "manage.py", "core/wsgi.py", "core/asgi.py"]
